WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
98471
TiledCoreAnimationDrawingArea.mm should not include RenderLayerCompositor.h
https://bugs.webkit.org/show_bug.cgi?id=98471
Summary
TiledCoreAnimationDrawingArea.mm should not include RenderLayerCompositor.h
Simon Fraser (smfr)
Reported
2012-10-04 17:50:25 PDT
TiledCoreAnimationDrawingArea.mm should not include RenderLayerCompositor.h
Attachments
Patch
(1.49 KB, patch)
2012-10-04 17:51 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2012-10-04 17:51:06 PDT
Created
attachment 167217
[details]
Patch
Simon Fraser (smfr)
Comment 2
2012-10-04 17:54:18 PDT
http://trac.webkit.org/changeset/130441
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug