TiledCoreAnimationDrawingArea.mm should not include RenderLayerCompositor.h https://bugs.webkit.org/show_bug.cgi?id=98471

Reviewed by Dean Jackson.

Remove #import of <WebCore/RenderLayerCompositor.h> from this file.
It is not required.

* WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:

git-svn-id: svn://svn.chromium.org/blink/trunk@130441 bbb929c8-8fbe-4397-9dbb-9b2b20218538